welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:30: error: not found: value color
  while (getCouleurSol()!=color.green)
                          ^